test/snapshots/break-error-target.stderr
Error: Break only works inside of loops!
   ╭─[ /home/user/IdeaProjects/Insert/test/src/break-error.int:4:3 ]
   │
 4 │   break;
   │   ───┬──  
   │      ╰──── The error occurred here
───╯